--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -24,12 +24,14 @@
             android:text="Title"
             android:textColor="#000"
             android:textStyle="bold"
+            android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/message"
-            android:text="Messae"
-            android:textSize="15sp"
+            android:text="Message"
+            android:textSize="18sp"
+            android:textColor="#000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
